--- a/style.css
+++ b/style.css
@@ -20,6 +20,8 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  align-items: center;
   justify-content: center;
   height: calc(100vh - 1px);
+  margin: 1.25rem;
 }
