--- a/style.css
+++ b/style.css
@@ -33,7 +33,8 @@ img {
 
 .container {
   background-color: var(--white);
-  width: 60vw;
+  width: 80vw;
+  height: 80vh;
   padding: 1.25rem;
   border-radius: 0.625rem;
   box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.05);
@@ -54,6 +55,7 @@ img {
 .container p {
   color: var(--grayish-blue);
   text-align: center;
+  padding: 0 3rem;
 }
 
 .attribution {
